# pytest-pyeval

./: .gitignore  EXPLORATION.md  LICENCE  README.md  pyproject.toml
.github/assets/: wizard-768.png.credit
.github/workflows/: test.yml
src/pyeval/: __init__.py  _core.py  _logfire.py  cli.py  plugin.py
src/pytest_pydantic_evals/: _core.py  evaluators.py  plugin.py
tests/: test_execution_result.py
tests/evals/: conftest.py  eval_example.py  eval_extra_evaluators.py  eval_from_file.py  eval_from_file_cases.yaml  eval_skipif.py
